Set max and min view height for chat messages to stop overflow over footer. Remove margin and add padding to make chat page look clean.

--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -51,7 +51,6 @@
 .chat-window {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   width: 100%;
   height: 90vh;
   border-left: solid 1px $battleship-gray;
@@ -84,7 +83,8 @@
   }
   
   #messages {
-    max-height: 69%;
+    min-height: 70vh;
+    max-height: 70vh;
     overflow: scroll;
     scrollbar-width: none;
 
